更新git忽略文件和项目说明文档